--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,9 @@
 == Changelog ==
 
+= 9.4.1 01/20/2020 =
+* TWEAK: Style tweaks to the Carousel Block to improve its display presentation.
+* BUG: Check that array is returned for carousels in post meta.
+
 = 9.4 01/17/2020 =
 * FEATURE: Introducing the Carousel block.
 * NEW: Introduce the `cn_pagination_links_args` filter.
