--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,8 @@
 == Changelog ==
 
+= 9.4.2 01/22/2020 =
+* BUG: Check to ensure `slug` not found warning is not generated when displaying entry social network icons.
+
 = 9.4.1 01/20/2020 =
 * TWEAK: Style tweaks to the Carousel Block to improve its display presentation.
 * BUG: Check that array is returned for carousels in post meta.
