--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,9 @@
 == Changelog ==
 
+= 9.4.6 03/09/2020 =
+* BUG: Fix scenario where a default map would display if no geocoded addresses existed. Now no map will display as intended.
+* DEV: Update dist files.
+
 = 9.4.5 02/17/2020 =
 * TWEAK: Change the default map tile provider from Wikimedia to OSM for the address geocoding in the admin.
 
