--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,8 @@
 == Changelog ==
 
+= 9.4.8 04/08/2020 =
+* BUG: Add missing image type parameter to the team block template files.
+
 = 9.4.7 03/30/2020 =
 * NEW: Introduce the `cn_output_default_content_block_atts` filter.
 * NEW: Introduce the `cn_metabox_rte_show_media_button` filter.
