--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,11 @@
 == Changelog ==
 
+= 9.5.1 04/28/2020 =
+* NEW: Introduce the `getEditPermalink()` and the `editPermalink()` functions.
+* TWEAK: Add permalink root to attributes in the `cn_permalink` filter.
+* BUG: Fix instances where "Sorry, you are not allowed to access this page." error message would display when attempting to edit a category on the Connections Categories admin page.
+* DEV: phpDoc updates.
+
 = 9.5 04/20/2020 =
 * NEW: Introduce the `[cn-entry]` shortcode.
 * TWEAK: Do not render the character section heads if the character index has been disabled.
