--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,9 @@
 == Changelog ==
 
+= 9.7.2 06/24/2020 =
+* BUG: Correct Map Block permissions.
+* DEV: Standardize namespace and move files to correct folders.
+
 = 9.7.1 06/23/2020 =
 * TWEAK: Strict comparison checks.
 * TWEAK: Compute the size beforehand, and not on each iteration.
