--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,24 @@
 == Changelog ==
 
+= 9.8 07/07/2020 =
+* FEATURE: Add 10 "Related To Entry" Content Blocks.
+* NEW: Add `id__not_in` parameter to `cnRetrieve::entries()`
+* NEW: Introduce `cnUtility::numHash()`.
+* NEW: Introduce the `cn_entry_query_random_seed` filter.
+* NEW: Add Entry helper functions class. Includes the `relatedTo()` helper method.
+* TWEAK: Pass the entry object in the bio, excerpt and note filter.
+* TWEAK: `Content_Block::content()` should echo not return string.
+* TWEAK: Correct `implode()` parameters.
+* TWEAK: Make carousels show one slide and scroll one slide in mobile.
+* TWEAK: Ensure uniform Content Block ID attribute when rendered via action or thru the Content Block API.
+* TWEAK: Set called class short-name property when constructing a Content Block to utilize in dynamic hooks.
+* TWEAK: Update hooks to make them dynamic utilizing the called class short-name.
+* TWEAK: Move the HTML markup from the `heading()` method in the Content Block to the `render()` method for uniformity with other class methods. This also allows for easier setting of the heading parameter to allow for dynamic Content Block headings.
+* TWEAK: Update the Static Google Maps Content Block to utilize the Entry helper functions class.
+* OTHER: Correct misspelling.
+* DEV: Add phpDoc.
+* DEV: Update rinvex/countries to version 7.0.1.
+
 = 9.7.2 06/24/2020 =
 * BUG: Correct Map Block permissions.
 * DEV: Standardize namespace and move files to correct folders.
