Add link to blog post in changelog.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,7 +1,7 @@
 == Changelog ==
 
 = 9.8 07/07/2020 =
-* FEATURE: Add 10 "Related To Entry" Content Blocks.
+* FEATURE: [Add 10 "Related To Entry" Content Blocks.](https://connections-pro.com/connections-9-8-related-content-blocks/)
 * NEW: Add `id__not_in` parameter to `cnRetrieve::entries()`
 * NEW: Introduce `cnUtility::numHash()`.
 * NEW: Introduce the `cn_entry_query_random_seed` filter.
