--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,12 @@
 == Changelog ==
 
+= 9.8.1 07/09/2020 =
+* BUG: Correct logic for the include parameter for Content Blocks.
+* BUG: Content Blocks need to default to the order of the `active` blocks and not the `order` of the `active` blocks.
+* OTHER: Add link to blog post in changelog.
+* I18N: Update POT file.
+* I18N: Update MO files.
+
 = 9.8 07/07/2020 =
 * FEATURE: [Add 10 "Related To Entry" Content Blocks.](https://connections-pro.com/connections-9-8-related-content-blocks/)
 * NEW: Add `id__not_in` parameter to `cnRetrieve::entries()`
