--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,10 @@
 == Changelog ==
 
+= 9.15 10/30/2020 =
+* TWEAK: Pass additional parameters to the `Connections_Directory/Shortcode/Conditional_Content/is_condition/{$this->atts['condition']}` filter.
+* DEV: Change class variable from private to protected.
+* DEV: Add deprecated notices throughout so usages can be removed and old code cleaned up.
+
 = 9.14 10/22/2020 =
 * NEW: Introduce the `[cn-content]` shortcode.
 * TWEAK: Rename "Custom Fields" metablock and Content Block to "Custom Metadata Fields" to help reduce confusion between "Custom Fields" and "custom fields".
