--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,24 @@
 == Changelog ==
 
+= 9.16 11/06/2020 =
+* TWEAK: Add filter to the `[cn-content]` shortcode to support the Page Builder plugin by SiteOrigin.
+* OTHER: Remove the legacy social network icons to reduce plugin package size.
+* DEV: Code alignment.
+* DEV: Correct the replacement method for a deprecated method debug message.
+* DEV: Remove use of deprecated method `cnValidate::userPermitted()`.
+* DEV: Remove use of deprecated method `cnCountry::getCode()`.
+* DEV: Remove use of deprecated method `cnOptions::getDateOptions()`.
+* DEV: Remove use of deprecated method `cnFormatting::toCamelCase()`.
+* DEV: Remove use of deprecated method `cnFunction::isDimensionalArray()`.
+* DEV: Remove use of deprecated method `cnEntry::getFullFirstLastName()`.
+* DEV: Remove use of deprecated methods `cnSanitize::htmlClass()` and cnFunction::escAttributeDeep()` in the term list class.
+* DEV: Remove use of deprecated method `cnUser::getFilterPage()`.
+* DEV: Remove use of deprecated method `cnUtility::getUUID()`.
+* DEV: Remove use of deprecated method `cnFormatting::maybeJSONencode()`.
+* DEV: Remove use of deprecated method `cnFormatting::maybeJSONdecode()`.
+* DEV: Remove use of deprecated method `cnUtility::toNumericHash()`.
+* DEV: Remove use of deprecated method in `cnRetrieve`.
+
 = 9.15 10/30/2020 =
 * TWEAK: Pass additional parameters to the `Connections_Directory/Shortcode/Conditional_Content/is_condition/{$this->atts['condition']}` filter.
 * DEV: Change class variable from private to protected.
