--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,12 @@
 == Changelog ==
 
+= 10.0 12/08/2020 =
+* FEATURE: Support for WordPress sitemaps.
+* TWEAK: Ensure the persistent log posts do not display in the WP sitemaps if the site is in debug mode.
+* TWEAK: Use `rawurlencode()` when encoding the permalink for department, organization, district, county,  locality, region, and country.
+* BUG: Correct find shortcode logic.
+* OTHER: Update readme.txt to make mention of the support of the native sitemaps support introduced in WordPress 5.5.
+
 = 9.17 11/24/2020 =
 * TWEAK: Remove use of deprecated methods `cnSanitize::htmlClass()` and cnFunction::escAttributeDeep()` in the term list class.
 * TWEAK: Remove use of deprecated method `cnValidate::userPermitted()`.
