--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,9 @@
 == Changelog ==
 
+= 10.4.2 09/23/2021 =
+* COMPATIBILITY: Add compatibility shim for the All-in-One Video Gallery plugin.
+* TWEAK: Ensure value is object before accessing its properties.
+
 = 10.4.1 09/14/2021 =
 * NEW: Introduce `_::isInteger()` and `_::isPositiveInteger()`.
 * NEW: Introduce the `suppress_filters` parameter in `cnRetrieve::entries()`.
