--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,8 @@
 == Changelog ==
 
+= 10.4.3 09/27/2021 =
+* SECURITY: Entry data on the Manage admin page should be escaped to prevent high level WordPress Users to perform Cross-Site Scripting attacks.
+
 = 10.4.2 09/23/2021 =
 * COMPATIBILITY: Add compatibility shim for the All-in-One Video Gallery plugin.
 * TWEAK: Ensure value is object before accessing its properties.
