--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,8 @@
 == Changelog ==
 
+= 10.4.14 02/10/2022 =
+* BUG: Set the default publish action to the sanitized request variable and allow filter to override it.
+
 = 10.4.13 02/07/2022 =
 * TWEAK: Update the Upcoming Block `index.js` file to utilize the `block.json` for registering the block metadata and split out the edit and save callbacks to separate files for easier maintainability.
 * TWEAK: When registering the Carousel and Team Blocks pass the `style` parameter as strings instead of arrays.
