--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,24 @@
 == Changelog ==
 
+= 10.4.18 03/28/2022 =
+* NEW: Introduce `Utility\_deprecated::_file()`.
+* TWEAK: Move the `Browser` library from the composer vendor folder to the Libraries folder.
+* TWEAK: Move the `wsScreenOptions` library from the composer vendor folder to the Libraries folder.
+* TWEAK: Move the `rinvex\countries` library from the composer vendor folder to the Libraries folder.
+* TWEAK: Update the `rinvex\Country` library.
+* TWEAK: Move the `pear\File_IMC` library from the composer vendor folder to the Libraries folder.
+* TWEAK: Move the `ForceUTF8\Encoding` library from the composer vendor folder to the Libraries folder.
+* TWEAK: Remove the `EDD_SL_Plugin_Updater` library.
+* TWEAK: Move the `parseCSV` library from the composer vendor folder to the Libraries folder.
+* TWEAK: Add placeholder files in the composer vendor folder that load the `parseCSV` library from Libraries folder.
+* TWEAK: Move various legacy javascript libraries from the composer vendor folder to the scripts vendor folder.
+* DEV: When minifying javascript using webpack drop console should be utilized to remove console statements from production files.
+* DEV: Set `allowedTextDomain` in `.eslintrc`.
+* DEV: Address most items flagged by eslint in `jquery.mapblock.js`.
+* DEV: Use webpack to package the assets for the jQuery Map Block script.
+* DEV: Update `.eslintrc` configuration.
+* DEV: Use webpack to package the assets for the jQuery Validation library.
+
 = 10.4.17 03/18/2022 =
 * NEW: Introduce `\Request\Int_Array`.
 * NEW: Introduce `\Request\Manage_Bulk_Actions`.
