--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,14 @@
 == Changelog ==
 
+= 10.4.22 04/21/2022 =
+* BUG: Update the Manage admin page to use the correct current page variable.
+* OTHER: Update `dist` files.
+* DEV: Bump async from 2.6.3 to 2.6.4.
+* DEV: Update `css-loader`.
+* DEV: Apply ESLint to `webpack.config.js`.
+* DEV: Utilize `rtlcss-webpack-plugin` instead of `webpack-rtl-plugin` to generate RTL CSS files.
+* DEV: phpDoc corrections.
+
 = 10.4.21 04/18/2022 =
 * BUG: Ensure default values for pagination on Manage admin page.
 * BUG: Correct logic for enhanced dropdowns on mobile.
