--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,33 @@
 == Changelog ==
 
+= 10.4.23 05/09/2022 =
+* NEW: Introduce `/Form/Field::Number`.
+* NEW: Introduce the `Connections_Directory/Entry/Action/Geocode` filter.
+* NEW: Introduce the `cnEntry::getOption()` and `cnEntry::setOptions()` methods.
+* TWEAK: Check for instance of `cnTemplate` instead of `false`.
+* TWEAK: Remove use of deprecated methodS.
+* TWEAK: Simplify comparison expression.
+* TWEAK: Simplify validation and sanitization of the permalink slugs setting values.
+* TWEAK: Update URL to documentation on formatting date and time.
+* TWEAK: Update URL from `http` to `https`.
+* TWEAK: Remove anchor tag from translation.
+* TWEAK: Ensure repeatable field count can only be a positive integer and the repeatable option is enforced if the field count is set to `0` (zero).
+* TWEAK: Utilize `/Form/Field::Number` in the Settings API for the `number` field type.
+* BUG: Correct logic that prevented the default term from being applied if no terms were selected to be attached to an entry.
+* BUG: Correct logic that prevented latitude and longitude values from being removed from an address.
+* BUG: Correct successful entry add/update logic.
+* BUG: Properly display the taxonomy admin menu label.
+* OTHER: Inline comments must end in full-stops, exclamation marks, or question marks.
+* OTHER: Correct misspellings.
+* OTHER: String concat is not required; use a single string instead.
+* OTHER: Remove unnecessary line returns in markup.
+* DEV: phpDoc updates and corrections.
+* DEV: Prevent direct access.
+* DEV: Remove commented out code.
+* DEV: Remove unnecessary semicolon.
+* DEV: Move the core Metabox API file to a sub folder for improved organization.
+* DEV: Ensure one class per file.
+
 = 10.4.22 04/21/2022 =
 * BUG: Update the Manage admin page to use the correct current page variable.
 * OTHER: Update `dist` files.
